# my_projects

./: README  README.md  readme.md
C/: cipher vigenere.c  greedy.c  mario.c  palindrome.c
C++/pipe/: CMakeLists.txt  client  readme.md  server
C++/pipe/include/: pipe_work.h
C++/pipe/source/: client.cpp  pipe_work.cpp  server.cpp
Python/: bubble_sort.py  factorial.py  five_elements.py  greedy.py  insertion_sort.py  loop.py  palindrome.py  selection_sort.py  vigenere.py
